# sphinx-lightbox

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  TESTING_QUICK_REFERENCE.md  export-project.sh  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml
docs/: accessibility.rst  api.rst  changelog.rst  conf.py  development.rst  directive.rst  index.rst  installation.rst  license.rst  release-checklist.rst  usage.rst
docs/_ext/: validation_fixes.py
docs/_static/: accessibility.css
docs/_templates/: about.html  searchfield.html
lightbox/: __init__.py  lightbox.py
lightbox/locales/: sphinx-lightbox.pot
lightbox/locales/da/LC_MESSAGES/: sphinx-lightbox.mo  sphinx-lightbox.po
lightbox/static/: __init__.py  lightbox.css  lightbox.js
requirements/: base.txt  dev.txt  docs.txt
scripts/: browser_smoke.py  dev.sh  setup_dev.sh  validate_dist.py  validate_docs.py  validate_standards.sh
test-root/: conf.py
tests/: __init__.py  conftest.py  helpers.py  test_coverage_edges.py  test_css.py  test_generated_html.py  test_i18n.py  test_js.py  test_latex.py  test_lightbox.py  test_validators.py  testing_framework_design.md
