[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-lightbox"
version = "0.6.0"
description = "Click-to-enlarge images for Sphinx documentation"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["sphinx", "extension", "lightbox", "images", "documentation", "accessibility"]
authors = [{name = "Aputsiak Niels Janussen", email = "aputtu+sphinx@gmail.com"}]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "Sphinx>=7.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-sphinx==0.6.3",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "beautifulsoup4>=4.11.0",
    "coverage[toml]>=7.0",
    "tox>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-docutils",
    "build>=1.0",
    "twine>=5.0",
    "pip-audit>=2.7",
]
docs = [
    "Sphinx>=7.0,<10.0",
    "sphinx-autobuild>=2021.3.14",
]

[project.urls]
Homepage = "https://github.com/aputtu/sphinx-lightbox"
Documentation = "https://aputtu.github.io/sphinx-lightbox/"
Repository = "https://github.com/aputtu/sphinx-lightbox.git"
Issues = "https://github.com/aputtu/sphinx-lightbox/issues"

[project.entry-points."sphinx.extensions"]
lightbox = "lightbox:setup"

# --- Tool Configurations ---

[tool.setuptools]
packages = ["lightbox"]
include-package-data = false

[tool.setuptools.package-data]
lightbox = [
    "py.typed",
    "static/*.css",
    "static/*.js",
    "locales/*.pot",
    "locales/*/LC_MESSAGES/*.po",
    "locales/*/LC_MESSAGES/*.mo",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Fast unit tests (no Sphinx required)",
    "integration: Integration tests (requires Sphinx)",
    "latex: LaTeX output tests",
    "html: HTML output tests",
    "slow: Slow tests (full builds)",
    "sphinx: SphinxTestApp integration tests",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=lightbox",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
]
filterwarnings = [
    "error",
    # Sphinx 7.0 calls this deprecated datetime API in its builders and
    # environment timestamp checks on Python 3.12 and newer.
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated.*:DeprecationWarning:sphinx.builders.gettext",
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated.*:DeprecationWarning:sphinx.builders.html",
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated.*:DeprecationWarning:sphinx.environment",
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated.*:DeprecationWarning:sphinx.util.i18n",
]


[tool.coverage.run]
source_pkgs = ["lightbox"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.paths]
# Maps the installed package location (inside tox venvs) back to the source
# tree so that coverage.py correctly attributes executed lines. Without this,
# tox runs show 0% coverage because the measured path and the source path
# don't match.
lightbox = [
    "lightbox",
    "*/site-packages/lightbox",
    "*\\site-packages\\lightbox",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 100

[tool.coverage.html]
directory = "htmlcov"


[tool.ruff]
line-length = 100
target-version = "py310"
src = ["lightbox", "tests", "docs/_ext", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Allow assert in tests
]

[tool.ruff.lint.isort]
known-first-party = ["lightbox"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "docutils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sphinx.*"
ignore_missing_imports = true
follow_imports = "skip"        # Sphinx 9 uses py3.12 syntax; skip to avoid syntax errors
